--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "W07.01",
   "version": "1.0.0",
   "description": "",
-  "main": "07.01.00.mvc02.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
